# Smart-Quiz-System

./: .env.example  .gitignore  CLAUDE.md  README.md  build.gradle.kts  gradle.properties  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  settings.gradle.kts
config/checkstyle/: checkstyle.xml
database/: LOCAL_NATIVE_SETUP.md  README.md  docker-compose.yml
database/clickhouse/: README.md  schema.sql  seed.sql
database/elasticsearch/: README.md  ilm_rag_corpus.json  schema.json  schema_rag_corpus.json  seed.ndjson  seed_rag_corpus.ndjson
database/mongodb/: README.md  schema.js  seed.js
database/postgresql/: README.md  schema.sql  seed.sql
database/redis/: README.md  schema.md  seed.redis
docs/: RUNBOOK.md  ai-service-design.md  analytics-service-design.md  auth-service-design.md  cheating-detection-service-design.md  database.md  design.md  exam-service-design.md  question-service-design.md
docs/adr/: ADR-000-template.md  ADR-001-sla-rpo-outbox.md  ADR-002-analytics-vs-cheating-split.md
infra/: docker-compose.dev.yml  docker-compose.obs.yml
infra/observability/: prometheus.yml
ops/: gen-jwt-keypair.sh
ops/kafka/: create-topics.sh
services/ai/: README.md  pyproject.toml
services/ai/app/: __init__.py  main.py
services/analytics/: Dockerfile  build.gradle.kts
services/auth/: Dockerfile  build.gradle.kts
services/cheat/: Dockerfile  build.gradle.kts
services/exam/: Dockerfile  build.gradle.kts
services/question/: Dockerfile  build.gradle.kts
shared-contracts/: README.md
shared-contracts/avro/: TOPICS.md  auth.role.changed.v1.avsc  cheat.alert.generated.v1.avsc  cheat.event.raw.v1.avsc  common.avsc  (+4 more)
web/: .env.local.example  .gitignore  package.json  tsconfig.tsbuildinfo
(+111 files in other folders)
