[project]
name = "smartquiz-ai"
version = "0.1.0"
description = "SmartQuiz AI Service — question generation, essay grading, semantic search."
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [{ name = "SmartQuiz Platform" }]
license = { text = "Internal" }

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "aiokafka>=0.11.0",
    "httpx>=0.27.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "testcontainers[kafka,postgres]>=4.8.0",
    "ruff>=0.6.9",
    "black>=24.10.0",
    "mypy>=1.11.0",
    "types-requests",
]
ml = [
    "sentence-transformers>=3.1.0",
    "numpy>=2.1.0",
    "scikit-learn>=1.5.0",
    "openai>=1.51.0",
    "langchain>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "ASYNC", "RUF"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
